# eigenpy-ros-release

./: .travis.yml  0001-Added-workaround-for-architecture-issue-with-GNUInst.patch  0001-Patch-Build-in-Release-Mode.patch  0001-Re-added-workaround-for-architecture-issue-with-GNUI.patch  0001-Set-CONFIG_INSTALL_DIR-to-share-eigenpy-cmake.patch  0002-Explicitly-set-Python3-for-Debian-Buster.patch  0002-Only-set-CMake-variables-if-not-set-cf.-2.patch  0002-Patch-Install-config-to-share-cmake.patch  0002-Revert-Added-workaround-for-architecture-issue-with-.patch  0002-Set-CONFIG_INSTALL_DIR-to-share-eigenpy-cmake.patch  0002-Set-build-type-to-Release.patch  0003-Fix-python3-path.patch  0003-Patch-Set-CONFIG_INSTALL_DIR-to-share-PROJECT_NAME-c.patch  0003-Set-CONFIG_INSTALL_DIR-to-share-cmake-eigenpy.patch  0003-Workaround-for-architecture-issue-with-GNUInstallDir.patch  0004-Explicitly-set-Python3-for-Debian-Buster.patch  0004-Fix-cmake-installation-path.patch  0004-ROS2-Set-PYTHON_DEB_LAYOUT-and-PYTHON_STANDARD_LAYOU.patch  0004-Use-full-path-to-Python3-cf.-1.patch  0005-Patch-for-PYTHON_STANDARD_LAYOUT.patch  0005-Set-CONFIG_INSTALL_DIR-to-share-eigenpy-cmake.patch  0005-Workaround-for-architecture-issue-with-GNUInstallDir.patch  0006-Only-set-CMake-variables-if-not-set-cf.-2.patch  0006-Use-full-path-to-Python3-cf.-1.patch  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
cmake/: package-config.cmake  package-config.cmake.orig
debian/: changelog  control  copyright  gbp.conf  rules
rpm/: ros-melodic-eigenpy.spec  ros-noetic-eigenpy.spec  template.spec
